# PN7160

./: README.md
ESP-PN7160-READ-CARD/: CMakeLists.txt  README.md
ESP-PN7160-READ-CARD/NfcLibrary/NdefLibrary/src/: RW_NDEF_MIFARE.c  RW_NDEF_T5T.c  T4T_NDEF_emu.c
ESP-PN7160-READ-CARD/NfcLibrary/NxpNci20/inc/: NxpNci20.h
ESP-PN7160-READ-CARD/NfcLibrary/NxpNci20/src/: NxpNci20.c
ESP-PN7160-READ-CARD/NfcLibrary/inc/: Nfc_settings.h
ESP-PN7160-READ-CARD/components/NfcLibrary/: CMakeLists.txt
ESP-PN7160-READ-CARD/components/NfcLibrary/NdefLibrary/inc/: P2P_NDEF.h  RW_NDEF.h  RW_NDEF_MIFARE.h  RW_NDEF_T1T.h  RW_NDEF_T2T.h  RW_NDEF_T3T.h  RW_NDEF_T4T.h  RW_NDEF_T5T.h  T4T_NDEF_emu.h
ESP-PN7160-READ-CARD/components/NfcLibrary/NdefLibrary/src/: P2P_NDEF.c  RW_NDEF.c  RW_NDEF_T1T.c  RW_NDEF_T2T.c  RW_NDEF_T3T.c  RW_NDEF_T4T.c
ESP-PN7160-READ-CARD/components/NfcLibrary/NxpNci20/inc/: NxpNci20.h
ESP-PN7160-READ-CARD/components/NfcLibrary/NxpNci20/src/: NxpNci20.c
ESP-PN7160-READ-CARD/components/NfcLibrary/inc/: Nfc.h
ESP-PN7160-READ-CARD/components/TML/: CMakeLists.txt  tml.c  tml.h
ESP-PN7160-READ-CARD/components/tool/: CMakeLists.txt  tool.c  tool.h
ESP-PN7160-READ-CARD/main/: main.c
ESP-PN7160-UPDATE-FIRMWARE/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ESP-PN7160-UPDATE-FIRMWARE/main/: CMakeLists.txt  main.c  phDnldNfc_UpdateSeq.c
zephyr/read_card_u575/: CMakeLists.txt  prj.conf  sample.yaml
zephyr/read_card_u575/boards/: nucleo_u575zi_q.overlay
zephyr/read_card_u575/include/: tml.h  tool.h
zephyr/read_card_u575/src/: main.c  tml.c  tool.c
